--- a/styles.css
+++ b/styles.css
@@ -626,11 +626,11 @@ video {
      margin: 0 0 0 0;
      padding-top: 240px ;
      width: 100%;
-     height: 100%;
      font-family: "Rethink Sans", serif;
      font-size: 3rem;
      font-weight: 700;
      color: #F8EB22;
+     text-align: center;
  }
  
  .bands-sectionp {
@@ -857,7 +857,7 @@ video {
     .bands-overlay2 {
         padding-top: 15% ;
         width: 100%;
-        height: 100%;
+       
         font-family: "Rethink Sans", serif;
         font-size: 2.5rem;
         font-weight: 700;
